drm/i915: Disable GPU resets for 915g (earliest gen3 desktop)

The CI farm reports that trying to write to the PCI config (GDRST: 0xc0)
results in an immediate and silent reboot on Grantsdale (i915g). Until
that is resolved, stop killing the machine!

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=101852
Fixes: 59ea90543f57 ("drm/i915: Implement GPU reset for 915/945")
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Cc: Ville Syrjälä <ville.syrjala@linux.intel.co