drivers/gpu/drm/i915/intel_uncore.c
@@ -1680,7 +1680,8 @@ static reset_func intel_get_gpu_reset(struct drm_i915_private *dev_priv)
 		return g4x_do_reset;
 	else if (IS_G33(dev_priv) || IS_PINEVIEW(dev_priv))
 		return g33_do_reset;
-	else if (INTEL_INFO(dev_priv)->gen >= 3)
+	else if (INTEL_INFO(dev_priv)->gen >= 3 &&
+		 INTEL_INFO(dev_priv)->platform != INTEL_I915G)
 		return i915_do_reset;
 	else
 		return NULL;
